syntax = "proto3";

package test.screenshots;
option java_package = "androidx.test.screenshots";
option java_outer_classname = "ScreenshotResultProtos";

message ScreenshotResult {
  enum Status {
    UNSPECIFIED = 0;
    PASSED = 1;
    FAILED = 2;
    MISSING_GOLDEN = 3;
  }

  message ComparisonStatistics {
    uint32 number_pixels_identical = 1;
    uint32 number_pixels_different = 2;
  }

  Status result = 1;

  string image_location_test = 2;
  string image_location_golden = 3; //actual location if image exists, expected location if missing
  string image_location_diff = 4;

  ComparisonStatistics comparison_statistics = 5;
}

